@@ -1,6 +1,10 @@
 Change Notes
 =============
 
+2012-12-11 jbornema
+	- Added CSVExtractor.trimColumnName to trim the identified column names.
+	  Added UTF-8 encoding support and a buggy SFDC UTF-16BE BOM (generated twice).
+
 2012-09-28 jbornema
 	- Fixed NPE in CSVLoader when export is done into regular/unzipped file.
 
